Co-authored-by: Darshan S <darshnyc@gmail.com> Co-authored-by: OmarASC6 <omartarekfawzy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
         
         <div class="form-uname">
-            <label id="fixed-expensesLable" for="nameField">Fixed-expenses:</label>
-            <input id="fixed-expenses" type="text" maxlength="7">
+            <label id="fixed-expenses" for="nameField">Fixed-expenses:</label>
+            <input id="expenses" type="text" maxlength="7">
           </div>
 
         <div class="form-sub">
