Co-authored-by: Darshan S <darshnyc@gmail.com> Co-authored-by: OmarASC6 <omartarekfawzy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           <input id="nameField" type="text" maxlength="7">
         </div>
         
-        <div class="form-uname">
+        <div class="form-name">
             <label id="fixed-expenses" for="nameField">Fixed-expenses:</label>
-            <input id="expenses" type="text" maxlength="7">
+            <input id="fixedExpenses" type="text" maxlength="7">
           </div>
 
         <div class="form-sub">
