Co-authored-by: Darshan S <darshnyc@gmail.com> Co-authored-by: AlessanderTASC6 <Attu72289@gmail.com>m

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
         </div>
         
         <div class="form-name">
-            <label id="fixed-expenses" for="nameField">Fixed-expenses:</label>
+            <label id="fixed-expenses" for="nameField">Savings:</label>
             <input id="fixedExpenses" type="text" maxlength="7">
           </div>
 
         <div class="form-sub">
-          <button id="subButton" type="button">Submit</button>
+          <button id="Button1" type="button">Balanced</button>
+          <button id="Button2" type="button">Prioritize Food</button>
+          <button id="Button3" type="button">Prioritize Transport</button>
         </div>
     </form>
 
