I did some changes on the user input page

--- a/input.html
+++ b/input.html
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js" defer></script>
     <script src="https://static.anychart.com/js/8.0.1/anychart-core.min.js" defer></script>
-<script src="https://static.anychart.com/js/8.0.1/anychart-pie.min.js" defer></script>
-
-<div id="container"></div>
-
+    <script src="https://static.anychart.com/js/8.0.1/anychart-pie.min.js" defer></script>
     <script src="js/input.js" type="text/javascript" defer></script>
     <link  rel="stylesheet" href="css/input.css">
     <title>Smart Budget</title>
@@ -26,17 +23,17 @@
 
     <div class="form-uname">
       <label id="nameLable" for="nameField">Income:</label>
-      <input id="nameField" type="text" maxlength="999" placeholder="Enter Your Income" name="email" required>
+      <input id="nameField" type="text" maxlength="7" placeholder="Enter Your Yearly Income" name="email" required>
     </div>
 
     <div class="form-name">
         <label id="savings" for="nameField">Savings:</label>
-        <input id="userSavings" type="text" maxlength="999" placeholder="Enter Your Savings" name="psw" required>
+        <input id="userSavings" type="text" maxlength="7" placeholder="Enter Home much you want to save" name="psw" required>
       </div>
     
       <div class="form-name">
         <label id="fixed-expenses" for="nameField">Fixed Expenses:</label>
-        <input id="fixedExpenses" type="text" maxlength="999" placeholder="Enter Your Fixed Expenses" name="psw" required>
+        <input id="fixedExpenses" type="text" maxlength="7" placeholder="Enter Your Fixed Expenses" name="psw" required>
       </div>
   </header>
 <div class="background-image"></div>
@@ -50,8 +47,8 @@
           <button id="Button3" class="block" type="button">Prioritize Transport</button>
           <button id="Button4" class="block" type="button">Prioritize Medical</button>
           <button id="Button5" class="block" type="button">Prioritize Entertainment</button>
-          <button id="Button6" class="block" type="button">Prioritize Utilities</button>
-          <button id="Button7" class="block" type="button">Prioritize Emergency</button>
+          <!-- <button id="Button6" class="block" type="button">Prioritize Utilities</button> -->
+          <!-- <button id="Button7" class="block" type="button">Prioritize Emergency</button> -->
           <button id="Button8" class="block" type="button">Prioritize Education</button>
       </div>
         
