--- a/input1.html
+++ b/input1.html
@@ -23,13 +23,12 @@
         <div class="w3-bar w3-black w3-card">
           <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
           <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-          <a href="contact.html" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
         </div>
       </div>
       
       <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
       <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-        <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
+        <!-- <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a> -->
       </div>
       
       <!-- Page content -->
@@ -257,6 +256,7 @@
               </div>
 
               <div id="container">
+                <!-- <h1 id="results" >The Results</h1> -->
                   <table align="center">
                     <tr>
                         <th scope="col">Category</th>
@@ -289,6 +289,10 @@
                       <tr>
                         <td>Education</td>
                         <td id="resultEducation"></td>
+                      </tr>
+                      <tr>
+                          <td>Savings Goal</td>
+                          <td id="resultSavings"></td>
                       </tr>
                     </table>
             </div>
