Co-authored-by: Darshan S <darshnyc@gmail.com> Co-authored-by: AlessanderTASC6 <Attu72289@gmail.com>

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="w3-top">
         <div class="w3-bar w3-black w3-card">
           <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-          <a href="input1.html" class="w3-bar-item w3-button w3-padding-large">GET STARTED</a>
-          <a href="contact.html" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
+          <a href="budgeting.html" class="w3-bar-item w3-button w3-padding-large">GET STARTED</a>
+          <!-- <a href="contact.html" class="w3-bar-item w3-button w3-padding-large">CONTACT</a> -->
         </div>
       </div>
 
@@ -51,7 +51,7 @@
           <div class="w3-third w3-center">
             <div class="logo">
               <img class="logo"
-                src="accounting.png">
+                src="assets/accounting.png">
             </div>
           </div>
         </div>
