--- a/budgeting.html
+++ b/budgeting.html
@@ -174,7 +174,7 @@
               <img src="assets/meta-chart-rec.jpeg" style="width: 700px;">
             </header>
             <div class="w3-container">
-            <button id = "Button1" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">NEXT <i class="fa fa-check"></i></button>    
+            <button id = "Button1" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right" onclick="document.getElementById('popout-food').style.display='none'">NEXT <i class="fa fa-check"></i></button>    
             <!-- <button  class="w3-button w3-red w3-section" onclick="document.getElementById('popout-food').style.display='none'">Close<i class="fa fa-remove"></i></button>  -->
             </div>
           </div>
@@ -186,10 +186,10 @@
                     <span onclick="document.getElementById('popout-transportation').style.display='none'" 
                    class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
                     <h2 class="w3-wide">Transportation</h2>
-                    <img src="as\sets/meta-chart-rec.jpeg" style="width: 700px;">
+                    <img src="assets/meta-chart-rec.jpeg" style="width: 700px;">
                   </header>
                   <div class="w3-container">
-                    <button id = "Button2" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">NEXT <i class="fa fa-check"></i></button>
+                    <button id = "Button2" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right" onclick="document.getElementById('popout-transportation').style.display='none'">NEXT <i class="fa fa-check"></i></button>
                     <!-- <button class="w3-button w3-red w3-section" onclick="document.getElementById('popout-transportation').style.display='none'">Close <i class="fa fa-remove"></i></button> -->
                   </div>
                 </div>
@@ -204,7 +204,7 @@
                         <img src="assets/meta-chart-rec.jpeg" style="width: 700px;">                       
                       </header>
                       <div class="w3-container">
-                        <button id = "Button3" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">NEXT <i class="fa fa-check"></i></button>
+                        <button id = "Button3" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right" onclick="document.getElementById('popout-education').style.display='none'">NEXT <i class="fa fa-check"></i></button>
                         <!-- <button class="w3-button w3-red w3-section" onclick="document.getElementById('popout-education').style.display='none'">Close <i class="fa fa-remove"></i></button> -->
                       </div>
                     </div>
@@ -219,7 +219,7 @@
                     <img src="assets/meta-chart-rec.jpeg" style="width: 700px;">
                   </header>
                   <div class="w3-container">
-                    <button  id = "Button4" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">NEXT <i class="fa fa-check"></i></button>
+                    <button  id = "Button4" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right" onclick="document.getElementById('popout-medicalexpenses').style.display='none'">NEXT <i class="fa fa-check"></i></button>
                     <!-- <button class="w3-button w3-red w3-section" onclick="document.getElementById('popout-medicalexpenses').style.display='none'">Close <i class="fa fa-remove"></i></button> -->
                   </div>
                 </div>
@@ -234,7 +234,7 @@
                     <img src="assets/meta-chart-rec.jpeg" style="width: 700px;">
                   </header>
                   <div class="w3-container">
-                    <button id = "Button5" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">NEXT <i class="fa fa-check"></i></button>
+                    <button id = "Button5" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right" onclick="document.getElementById('popout-balanced').style.display='none'">NEXT <i class="fa fa-check"></i></button>
                     <!-- <button class="w3-button w3-red w3-section" onclick="document.getElementById('popout-balanced').style.display='none'">Close <i class="fa fa-remove"></i></button> -->
                   </div>
                 </div>
@@ -249,7 +249,7 @@
                     <img src="assets/meta-chart-rec.jpeg" style="width: 700px;">
                   </header>
                   <div class="w3-container">
-                    <button id = "Button6" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">NEXT <i class="fa fa-check"></i></button>
+                    <button id = "Button6" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right" onclick="document.getElementById('popout-entertainment').style.display='none'">NEXT <i class="fa fa-check"></i></button>
                     <!-- <button class="w3-button w3-red w3-section" onclick="document.getElementById('popout-entertainment').style.display='none'">Close <i class="fa fa-remove"></i></button> -->
                   </div>
                 </div>
