--- a/budgeting.html
+++ b/budgeting.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -39,7 +42,7 @@
         <!-- Automatic Slideshow Images -->
         <div class="mySlides w3-display-container w3-center">
           <img src="assets/finance_image.png" style="width:100%">
-          <div class= "w3-container w3-text-white w3-padding-32"> 
+          <!-- <div class= "w3-container w3-text-white w3-padding-32">  -->
           </div>
         </div>
 
@@ -48,11 +51,11 @@
         <!-- The How To Section -->
         <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
           <h2 class="w3-wide">Smart Budgeting</h2>
-          <p class="w3-opacity"><i>Do not know what to do ? It's Simple</i></p>
-          <li class="w3-justify"><i>Simply enter your annual income, your fixed expenses (rent, insurance, etc) and how much you want to save annualy</i></li>
-          <li class="w3-justify"><i>As you click submit, you will be directed to the scenarios where you pick your preferable scenario</i></li>
-          <li class="w3-justify"><i>As you choose a scenario, you will be able to see how each one allocates the income</i></li>
-          <li class="w3-justify"><i>Then, click next and you will see how your budget was allocated making you reach the savings goal you want</i></li>
+          <p class="how-to"><i>Do not know what to do ? It's Simple</i></p>
+          <li class="step-step">Simply enter your annual income, your fixed expenses (rent, insurance, etc) and how much you want to save annualy</li>
+          <li class="step-step">As you click submit, you will be directed to the scenarios where you pick your preferable scenario</li>
+          <li class="step-step">As you choose a scenario, you will be able to see how each one allocates the income</li>
+          <li class="step-step">Then, click next and you will see how your budget was allocated making you reach the savings goal you want</li>
 
 
 
@@ -172,7 +175,7 @@
             <header class="w3-container w3-teal w3-center w3-padding-32"> 
               <span onclick="document.getElementById('popout-food').style.display='none'" 
              class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-              <h2 class="w3-wide">Food</h2>
+              <h2 class="pop-title">Food</h2>
               <img src="assets\Food Chart.png" style="width: 400px;">
             </header>
             <div class="w3-container">
@@ -187,7 +190,7 @@
                   <header class="w3-container w3-teal w3-center w3-padding-32"> 
                     <span onclick="document.getElementById('popout-transportation').style.display='none'" 
                    class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-                    <h2 class="w3-wide">Transportation</h2>
+                    <h2 class="pop-title">Transportation</h2>
                     <img src="assets\Trans Chart.png" style="width: 400px;">
                   </header>
                   <div class="w3-container">
@@ -202,7 +205,7 @@
                       <header class="w3-container w3-teal w3-center w3-padding-32"> 
                         <span onclick="document.getElementById('popout-education').style.display='none'" 
                        class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-                        <h2 class="w3-wide">Education</h2>
+                        <h2 class="pop-title">Education</h2>
                         <img src="assets\Edu Chart.png" style="width: 400px;">                       
                       </header>
                       <div class="w3-container">
@@ -217,7 +220,7 @@
                   <header class="w3-container w3-teal w3-center w3-padding-32"> 
                     <span onclick="document.getElementById('popout-medicalexpenses').style.display='none'" 
                    class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-                    <h2 class="w3-wide">Medical Expenses</h2>
+                    <h2 class="pop-title">Medical Expenses</h2>
                     <img src="assets\Med Chart.png" style="width: 400px;">
                   </header>
                   <div class="w3-container">
@@ -232,7 +235,7 @@
                   <header class="w3-container w3-teal w3-center w3-padding-32"> 
                     <span onclick="document.getElementById('popout-balanced').style.display='none'" 
                    class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-                    <h2 class="w3-wide">National Averages</h2>
+                    <h2 class="pop-title">National Averages</h2>
                     <img src="assets\Rec Chart.png" style="width: 400px;">
                   </header>
                   <div class="w3-container">
@@ -247,7 +250,7 @@
                   <header class="w3-container w3-teal w3-center w3-padding-32"> 
                     <span onclick="document.getElementById('popout-entertainment').style.display='none'" 
                    class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-                    <h2 class="w3-wide">Entertainment</h2>
+                    <h2 class="pop-title">Entertainment</h2>
                     <img src="assets\Entertainment Chart.png" style="width: 400px;">
                   </header>
                   <div class="w3-container">
