--- a/budgeting.html
+++ b/budgeting.html
@@ -122,7 +122,7 @@
                 <div class="w3-container w3-white">
                   <p><b>Scenario Two</b></p>
                   <p class="w3-opacity">Priortizing Transportation</p>
-                  <p>You enjoy travel, and want the capacity to do so.</p>
+                  <p>You commute for long distances, and want the capacity to do so.</p>
                   <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('popout-transportation').style.display='block'">Pick Scenario</button>
                 </div>
               </div>
