--- a/budgeting.html
+++ b/budgeting.html
@@ -176,7 +176,7 @@
               <span onclick="document.getElementById('popout-food').style.display='none'" 
              class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
               <h2 class="pop-title">Food</h2>
-              <img src="assets\Food Chart.png" style="width: 400px;">
+              <img src="assets\Food chart.png" style="width: 400px;">
             </header>
             <div class="w3-container">
             <button id = "Button1" class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right" onclick="document.getElementById('popout-food').style.display='none'">NEXT <i class="fa fa-check"></i></button>    
