--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Description</h1>
             <h5 class="w3-padding-32">Our application Smart Budget helps users
               budget their income while maintaining their savings. The user inputs
-              they annual income, fixed expenses, and a goal of how muuch they want to save.(i.e : 
+              they annual income, fixed expenses, and a goal of how much they want to save.(i.e : 
               John wants to save $3,500 to buy some AirPods and a new Mac).
             </h5>
             <h5 class="w3-padding-32"> The user then picks a scenario from different
