--- a/budgeting.html
+++ b/budgeting.html
@@ -161,7 +161,7 @@
                             <div class="w3-container w3-white">
                               <p><b>Scenario Six</b></p>
                               <p class="w3-opacity">Priortizing Entertainment</p>
-                              <p>You're a party animal or a movie buff, and like to live to the fulles</p>
+                              <p>You are someone who likes parties and enjoying your time</p>
                               <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('popout-entertainment').style.display='block'">Pick Scenario</button>
                             </div>
                           </div>
